--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_ingredient">IngredientActivity</string>
+    <string name="title_activity_conversion">ConversionActivity</string>
+    <string name="title_activity_recipe">RecipeActivity</string>
+
 </resources>
