--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,12 @@
     <string name="title_activity_conversion">ConversionActivity</string>
     <string name="title_activity_recipe">RecipeActivity</string>
 
+    <!-- Toast messages -->
+    <string name="toast_internal_error">Something went wrong... sorry!</string>
+    <string name="toast_duplicated_recipe">Name already in use</string>
+    <string name="toast_duplicated_ingredient">Ingredient already in use</string>
+    <string name="toast_wrong_input">Set all inputs correctly</string>
+    <string name="toast_no_sharing">Nothing to share</string>
+    <string name="toast_recipe_added">Recipe added successfully</string>
+
 </resources>
