--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -79,6 +79,8 @@
     <string name="txt_share_rectangle">per teglia rettangolare di dimensione</string>
     <string name="txt_share_square">per teglia quadrata di dimensione</string>
     <string name="txt_share_circle">per teglia circolare con diametro</string>
+    <string name="txt_add_new_recipe">Aggiungi una ricetta</string>
+    <string name="txt_no_recipe_stored">Nessuna ricetta salvata</string>
 
     <!-- Alert dialog -->
     <string name="dlg_delete_title">Elimina ricetta</string>
