--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,6 +80,8 @@
     <string name="txt_share_rectangle">for rectangular pan with size</string>
     <string name="txt_share_square">for squared pan with size</string>
     <string name="txt_share_circle">for circular pan with diameter</string>
+    <string name="txt_add_new_recipe">Add new recipe</string>
+    <string name="txt_no_recipe_stored">No recipe stored</string>
 
     <!-- Alert dialog -->
     <string name="dlg_delete_title">Delete recipe</string>
