--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -84,7 +84,7 @@
     <string name="txt_share_rectangle">tama&#241;o del plato rectangular</string>
     <string name="txt_share_square">de una plaza de un molde de tama&#241;o</string>
     <string name="txt_share_circle">pan circular con un di&#225;metro</string>
-    <string name="txt_add_new_recipe">Aggiungi una ricetta</string>
+    <string name="txt_add_new_recipe">A&#241;adir una receta</string>
     <string name="txt_no_recipe_stored">No hay recetas guardan</string>
     <string name="txt_swipe_right">Arrastre para editar/borrar una receta</string>
 
